--- a/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/actionability.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/snv_indel/actionability.qmd
@@ -162,11 +162,12 @@ DT::datatable(
     `text-align` = 'center',
     backgroundColor = DT::styleEqual(
       c('genomic','hgvsp','codon',
-        'exon','gene_region_mut',
+        'exon','gene_region_mut','other',
         'gene_lof','gene_mut'), 
       c(pcgrr::color_palette$bg_dark,
         pcgrr::color_palette$bg_dark,
         pcgrr::color_palette$bg_dark,
+        pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
@@ -327,10 +328,11 @@ DT::datatable(
     backgroundColor = DT::styleEqual(
       c('hgvsp','genomic','codon',
         'exon','gene_region_mut',
-        'gene_lof','gene_mut'), 
+        'gene_lof','gene_mut','other'), 
       c(pcgrr::color_palette$bg_dark,
         pcgrr::color_palette$bg_dark,
         pcgrr::color_palette$bg_dark,
+        pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
         pcgrr::color_palette[['warning']],
